<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/define_dimen_6"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_16">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImg"
        android:layout_width="@dimen/define_dimen_70"
        android:layout_height="@dimen/define_dimen_70"
        app:cardCornerRadius="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgConversation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avt" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/define_dimen_20"
        android:text="@string/example_username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvLastMessage"
        app:layout_constraintStart_toEndOf="@id/cvImg"
        app:layout_constraintTop_toTopOf="@id/cvImg" />

    <TextView
        android:id="@+id/tvLastMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="@dimen/define_dimen_20"
        android:text="@string/example_message"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="@id/cvImg"
        app:layout_constraintEnd_toStartOf="@id/tvTimestamp"
        app:layout_constraintStart_toStartOf="@id/tvUsername"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_time"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cvImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cvImg" />

</androidx.constraintlayout.widget.ConstraintLayout>

