<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_1"
    tools:context=".ui.DetailChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/define_dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="@dimen/define_dimen_16"
            android:paddingEnd="@dimen/define_dimen_16"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/define_dimen_60"
            android:layout_height="@dimen/define_dimen_60"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/define_dimen_30"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/llInfo"
            app:layout_constraintStart_toEndOf="@+id/icBack"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgConversation"
                android:layout_width="@dimen/define_dimen_60"
                android:layout_height="@dimen/define_dimen_60"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avt" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/define_dimen_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icDelete"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_online"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icDelete"
            android:layout_width="@dimen/define_dimen_35"
            android:layout_height="@dimen/define_dimen_35"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:background="@drawable/background_chat_input"
        android:padding="@dimen/define_dimen_10"
        app:layout_constraintBottom_toTopOf="@id/etInputMessage"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/etInputMessage"
        android:layout_width="0dp"
        android:layout_height="@dimen/define_dimen_50"
        android:layout_margin="@dimen/define_dimen_20"
        android:background="@drawable/background_chat_input"
        android:gravity="center|start"
        android:hint="@string/hint_type_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="@color/gray"
        android:maxLines="5"
        android:minLines="1"
        android:paddingHorizontal="@dimen/define_dimen_16"
        android:scrollHorizontally="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/icSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rcvChat" />


    <ImageView
        android:id="@+id/icSend"
        android:layout_width="@dimen/define_dimen_40"
        android:layout_height="@dimen/define_dimen_40"
        android:layout_marginEnd="@dimen/define_dimen_16"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@+id/etInputMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etInputMessage"
        app:layout_constraintTop_toTopOf="@id/etInputMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>