<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListConversationFragment"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/define_dimen_16">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/define_dimen_40"
                android:layout_height="@dimen/define_dimen_40"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_16"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/define_dimen_20"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/define_dimen_40"
                    android:layout_height="@dimen/define_dimen_40"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_avt" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgSearch"
                android:layout_width="@dimen/define_dimen_40"
                android:layout_height="@dimen/define_dimen_40"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_16"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_search" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/define_dimen_30"
            android:paddingVertical="@dimen/define_dimen_10"
            android:text="@string/title_conversations"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_rectangle"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/define_dimen_10"
            android:paddingVertical="@dimen/define_dimen_30" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/leftMenu"
        android:layout_width="@dimen/left_menu_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:padding="@dimen/define_dimen_16">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutSwitchUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/define_dimen_10">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/define_dimen_40"
                android:layout_height="@dimen/define_dimen_40"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/define_dimen_20"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgConversation"
                    android:layout_width="@dimen/define_dimen_40"
                    android:layout_height="@dimen/define_dimen_40"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avt" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_20"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/example_username"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvLastMessage"
                app:layout_constraintStart_toEndOf="@id/imgConversation"
                app:layout_constraintTop_toTopOf="@id/imgConversation" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSelected"
                android:layout_width="@dimen/define_dimen_20"
                android:layout_height="@dimen/define_dimen_20"
                app:srcCompat="@drawable/baseline_check_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--        <Spinner-->
        <!--            android:id="@+id/spUserList"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@android:color/transparent"-->
        <!--            android:padding="8dp"-->
        <!--            android:popupBackground="@android:color/white"-->
        <!--            android:spinnerMode="dropdown" />-->
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
